infrastructure/argocd/docker-registry/docker.localhost/45.132.246.226/ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-external
  namespace: traefik
spec:
  type: ExternalName
  externalName: 45.132.246.226
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
      name: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry-tls
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docker.ligidi.africa`)
      kind: Rule
      services:
        - name: docker-registry-external
          port: 5002
      # 'priority' must > traefik-dashboard priority(46) to avoid 404 /api/v1/settings
      priority: 100
  tls: {}
